# Kraken

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyconf  KWStyle.xml  MEMBUF.md  RESTRICTIONS.md  SLICES.md
examples/: 01_files.cpp  02_sockets.cpp  CMakeLists.txt
include/Kraken/: Collections.h  Definitions.h  Features.h  MetaSquid.h  Queue.h  Slice.h  Stack.h  membuf.h
include/Kraken/IO/: Address.h  EPoll.h  Event.h  File.h  IEPollable.h  IStream.h  Socket.h  Timer.h
src/IO/: Event.cpp  File.cpp  Timer.cpp
tests/: CMakeLists.txt  collection_tests.cpp  epoll_tests.cpp  event_tests.cpp  file_tests.cpp  socket_tests.cpp  squid_tests.cpp.cpp
